# RescueCam

./: .gitignore  CMakeLists.txt  CMakeListsRaspi.txt  main.cpp  starting_script.sh
py-files/: make_heatmap.py
src/: BitReadStuff.h  DisplayManager.cpp  DisplayManager.h  FilterBase.cpp  FilterBase.h  MLX90640_API.cpp  MLX90640_API.h  ThermalCamera.cpp  ThermalCamera.h  main.cpp
